--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "cbdata-swapi-planets",
+  "name": "swapi-react",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "^24.12.0",
+    "pnpm": ">=10.11.1"
+  },
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
     "start": "next start",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -13,27 +17,33 @@
     "gen": "pnpm run gen:swapi",
     "gen:swapi": "pnpm run gen:swapi:schema && pnpm run gen:swapi:sample",
     "gen:swapi:schema": "node scripts/gen-swapi-schema.ts",
-    "gen:swapi:sample": "node scripts/gen-swapi-sample-data.ts"
+    "gen:swapi:sample": "node scripts/gen-swapi-sample-data.ts",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@opennextjs/cloudflare": "^1.17.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "valibot": "^1.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4.2.1",
+    "@types/node": "^25.3.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^10.0.2",
     "eslint-config-next": "16.1.6",
     "json-schema-to-valibot": "^0.3.0",
     "prettier": "^3.8.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.2.1",
     "typescript": "^5",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "wrangler": "^4.69.0"
   }
 }
